src/App.scss
.app {
  margin: 0 auto;
  width: 80%;

  &__settings {
    padding: 10px;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    gap: 20px;
    margin-top: 10px;
  }

  &__setting {
    min-width: 15%;
    font-size: 1.7em;
  }

  &__step,
  &__frame-size,
  &__item-width,
  &__animation-duration,
  &__infinite {
    font-size: 1em;
    margin-bottom: 20px;
  }

  &__infinite {
    visibility: hidden;
  }
}

